package ucf.assignments;

import javafx.collections.ObservableList;

public class ClearList {
    //Take in a list
    //Remove all items form the list
    public void ListClear(ObservableList<Item> list){
        list.clear();
    }
}
