@startuml

class MainApp{
    main()
    start()
}

class ClearList{
    +listCollector
    +ListClear()
}
class AddItem{
    +ItemAdder()
    +ValidateInput
    +PrintErrorMessages
    +returnItem
}
class Item{
    +Item()
    +getItemValue
    +setItemValue
    +getItemSerial
    +setItemSerial
    +getItemName
    +setItemName
}
class RemoveItem{
    +listCollector
    +intCollector
    +ItemRemover()
}
class MainAppController{
    +initialize()
    +AddItem()
    +buttonRemove()
    +clearList()
    +SaveAsTxt()
    +SaveAsJSON()
    +LoadAFile()
    +SaveAsHTML()
}
javafx.Application <|-- MainApp

MainApp --|> MainAppController
AddItem --|> MainAppController
Item --|> AddItem
ClearList --|> MainAppController
RemoveItem --|> MainAppController


@enduml